<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment">


    <Button
        android:id="@+id/buttonInFragment"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/sigte"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen12" />

    <ImageView
        android:id="@+id/imagen12"
        android:layout_width="226dp"
        android:layout_height="171dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/buttonInFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="311dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInFragment">

        <com.everseat.textviewlabel.TextViewLabel
            android:id="@+id/mitextlabel"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/pregunta"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:labelColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="376dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:hint="@string/pregunta" />

        <com.everseat.textviewlabel.TextViewLabel
            android:id="@+id/mitextlabel2"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/categoria"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:labelColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/categoria" />

        <com.everseat.textviewlabel.TextViewLabel
            android:id="@+id/mitextlabel3"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/difcultad"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:labelColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/difcultad" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="198dp"
        android:layout_height="98dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>