<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.everseat.textviewlabel.TextViewLabel
        android:id="@+id/mitextlabel"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/pregunta"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:labelColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/pregunta"
        app:layout_constraintBottom_toTopOf="@+id/mitextlabel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mitextlabel" />

    <com.everseat.textviewlabel.TextViewLabel
        android:id="@+id/mitextlabel2"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="294dp"
        android:gravity="center"
        android:text="@string/categoria"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:labelColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/categoria"
        app:layout_constraintBottom_toTopOf="@+id/mitextlabel3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mitextlabel2" />

    <com.everseat.textviewlabel.TextViewLabel
        android:id="@+id/mitextlabel3"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/difcultad"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:labelColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="240dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:hint="@string/difcultad"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mitextlabel3"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="195dp"
        android:layout_height="166dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imagen12"
            android:layout_width="183dp"
            android:layout_height="148dp"
            android:layout_marginEnd="174dp"
            android:layout_marginRight="174dp"
            android:src="@drawable/logo"

            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="347dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mitextlabel3">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>